unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Status__c.field-meta.xml
<CustomField>
    <fullName>ETST_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Request Rejected</fullName>
            </value>
            <value>
                <fullName>Service Confirmed</fullName>
            </value>
            <value>
                <fullName>Payment Success-In Review</fullName>
            </value>
            <value>
                <fullName>Payment success</fullName>
            </value>
            <value>
                <fullName>Payment Failed</fullName>
            </value>
            <value>
                <fullName>Request Cancelled</fullName>
            </value>
            <value>
                <fullName>Awaiting Confirmation</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Parent Cancelled</fullName>
            </value>
            <value>
                <fullName>School Changed</fullName>
            </value>
            <value>
                <fullName>Auto Deactivated</fullName>
            </value>
            <value>
                <fullName>Service Updated</fullName>
            </value>
            <value>
                <fullName>Refund Requested</fullName>
            </value>
            <value>
                <fullName>Refund Cancelled</fullName>
            </value>
            <value>
                <fullName>Location Update - Under Review</fullName>
            </value>
            <value>
                <fullName>Location Update - Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>