unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_Street_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pickup Street  Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>