unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Student__c.field-meta.xml
<CustomField>
    <fullName>ETST_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>ETST_Student__c</referenceTo>
    <relationshipName>ETST_Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>