unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Student_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_Student_Name__c</fullName>
    <formula>IF(ETST_Student__c !=null, (ETST_Student__r.ETST_First_Name__c+&#39; &#39;+ETST_Student__r.Name), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>