unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_System_Comments__c.field-meta.xml
<CustomField>
    <fullName>ETST_System_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Comments</label>
    <type>TextArea</type>
</CustomField>