unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Villa_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_Villa_Building_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pickup Villa/Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>