unpackaged/main/default/objects/ET_Service_Request__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Initiated</fullName>
            </value>
            <value>
                <fullName>Payment Pending</fullName>
            </value>
            <value>
                <fullName>Payment Success</fullName>
            </value>
            <value>
                <fullName>Refund Requested</fullName>
            </value>
            <value>
                <fullName>Await3D</fullName>
            </value>
            <value>
                <fullName>Captured</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Fully Paid</fullName>
            </value>
            <value>
                <fullName>Refund Cancelled</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
            <value>
                <fullName>On Premise Requested</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>