unpackaged/main/default/objects/ET_Service_Request__c/fields/School_Admin_Comments__c.field-meta.xml
<CustomField>
    <fullName>School_Admin_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>School Admin Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>