unpackaged/main/default/objects/ET_Service_Request__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>ETI_Booking__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>ETI_Booking__c.Booking_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>ETI_Booking__c.Service_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>