unpackaged/main/default/objects/ET_Service_Request__c/recordTypes/ETC_Car_Booking_Services.recordType-meta.xml
<RecordType>
    <fullName>ETC_Car_Booking_Services</fullName>
    <active>true</active>
    <label>Car Booking Services</label>
</RecordType>