unpackaged/main/default/objects/ET_Service_Request__c/recordTypes/ETCAR_chauffeur_Services.recordType-meta.xml
<RecordType>
    <fullName>ETCAR_chauffeur_Services</fullName>
    <active>true</active>
    <label>Limo Services</label>
</RecordType>