unpackaged/main/default/objects/ET_Service_Request__c/recordTypes/ETCAR_Rental_Services.recordType-meta.xml
<RecordType>
    <fullName>ETCAR_Rental_Services</fullName>
    <active>true</active>
    <label>Rental Services</label>
</RecordType>