unpackaged/main/default/objects/ET_Service_Request__c/recordTypes/ETST_School_Coordinator.recordType-meta.xml
<RecordType>
    <fullName>ETST_School_Coordinator</fullName>
    <active>true</active>
    <label>School Coordinator</label>
</RecordType>