unpackaged/main/default/objects/ET_Service_Request__c/recordTypes/ETST_School_Coordinator_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>ETST_School_Coordinator_Read_Only</fullName>
    <active>true</active>
    <label>School Coordinator Read Only</label>
</RecordType>