unpackaged/main/default/objects/ET_Service_Request__c/recordTypes/ETST_School_Service_Request.recordType-meta.xml
<RecordType>
    <fullName>ETST_School_Service_Request</fullName>
    <active>true</active>
    <label>School Service Request</label>
</RecordType>