unpackaged/main/default/objects/ET_Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Account__c</columns>
    <columns>ETST_School_Name__c</columns>
    <columns>ETST_Area_Zone__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>ETI_Payment_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ETST_Status__c</columns>
    <columns>ETST_Refund_Amount__c</columns>
    <columns>ETST_Service_End_Date__c</columns>
    <columns>ETST_Student__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ET_Service_Request__c.Vehicle_Inspection</value>
    </filters>
    <label>All</label>
</ListView>