unpackaged/main/default/objects/ET_Service_Request__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>ET_Account__c</columns>
    <columns>ETST_Student__c</columns>
    <columns>ETST_Student_Name__c</columns>
    <columns>ETST_School_Name__c</columns>
    <columns>ETST_Fare_Charges__c</columns>
    <columns>ETST_Status__c</columns>
    <columns>ETST_Transport_Type__c</columns>
    <columns>ETST_Service_Type__c</columns>
    <columns>ETST_Pick_Up_Start_Date__c</columns>
    <columns>ETST_Pick_Up_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>School_Admin_Comments__c</columns>
    <columns>ETST_Payee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ET_Service_Request__c.ETST_School_Coordinator,ET_Service_Request__c.ETST_School_Coordinator_Read_Only,ET_Service_Request__c.ETST_School_Service_Request</value>
    </filters>
    <label>School Service Requests</label>
    <sharedTo />
</ListView>