unpackaged/main/default/objects/ET_Service_Request__c/listViews/ET_School_Transport_ET_Service_Request.listView-meta.xml
<ListView>
    <fullName>ET_School_Transport_ET_Service_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>s</label>
    <queue>ET_School_Transport</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>