unpackaged/main/default/objects/ET_Service_Request__c/listViews/Pending_Payment_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_Payment_Requests</fullName>
    <columns>NAME</columns>
    <columns>ET_Account__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ET_Service_Request__c.Vehicle_Inspection</value>
    </filters>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Payment Pending</value>
    </filters>
    <label>Payment Pending Requests</label>
    <sharedTo>
        <role>BC_EC_Inspection_Controller</role>
    </sharedTo>
</ListView>