unpackaged/main/default/objects/ET_Service_Request__c/listViews/Rental_and_Chauffeur_Services.listView-meta.xml
<ListView>
    <fullName>Rental_and_Chauffeur_Services</fullName>
    <columns>NAME</columns>
    <columns>ET_Account__c</columns>
    <columns>ETC_Billing_Total__c</columns>
    <columns>ETC_Service_Type__c</columns>
    <columns>ETCAR_Request_Type__c</columns>
    <columns>ETC_Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ET_Service_Request__c.ETC_Car_Booking_Services</value>
    </filters>
    <label>Rental and Chauffeur Services</label>
    <sharedTo>
        <group>ET_Rental_Limo</group>
    </sharedTo>
</ListView>