unpackaged/main/default/objects/ET_Service_Request__c/listViews/Vehicle_Inspection.listView-meta.xml
<ListView>
    <fullName>Vehicle_Inspection</fullName>
    <columns>NAME</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ET_Service_Request__c.Vehicle_Inspection</value>
    </filters>
    <label>Vehicle Inspection</label>
    <sharedTo>
        <group>ET_Inspection</group>
    </sharedTo>
</ListView>